
** The configure options `--with-gcc', `--without-gcc' have been removed.
Configure will use gcc by default.  Set the CC environment variable if
you need control over which C compiler is used.

** The configure option `--with-gtk' has been removed.  Gtk is now the
default toolkit, but you can use --with-x-toolkit=gtk if necessary.

* Changes in Emacs 23.1

** scroll-preserve-screen-position also preserves the column position.
** Completion.
*** `completion-styles' can be customized to choose your favorite completion.
*** The default completion styles include a form of partial-completion.
*** The new command `minibuffer-force-complete chooses one of the possible
completions, rather than stopping at the common prefix.
*** `completion-auto-help' can be set to `lazy' to list the completions only
if you repeat the completion.  This was already supported in
`partial-completion-mode'.

** Emacs now supports using both X displays and ttys in one session.
Start the server (M-x server-start).  Then `emacsclient -t' creates a
tty frame connected to the running emacs server.  You can also use any
number of different ttys.  `emacsclient -c' creates a new X11 frame on
the current $DISPLAY or a tty frame if $DISPLAY is not set.

You can test for the presence of this feature in your Lisp code by
testing for the `multi-tty' feature.

** The Emacs character set is now a superset of Unicode.
(It has about four times the code space, which should be plenty).

The internal encoding used for buffers and strings is now
Unicode-based and called `utf-8-emacs'.  utf-8-emacs is backwards
compatible with the UTF-8 encoding of Unicode.  The `emacs-mule'
coding system can still read and write data in the old internal encoding.

Since the internal encoding is also used by default for byte-compiled
files -- i.e. the normal coding system for byte-compiled Lisp files is
now utf-8-Emacs -- Lisp containing non-ASCII characters which is